--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
   <div class="container-medium">
 
-      <!-- Theme Controls -->
+    <!-- Theme Controls -->
     <div class="controls-bar" style="margin-top: var(--spacing-400);">
       <div class="control-group">
         <label class="labelBold30 text-secondary" for="theme-select">Theme:</label>
@@ -163,23 +163,29 @@
       </div>
     </div>
 
-    <!-- Hero Section -->
+    <!-- Hero Section - Using Text Pair 8000 -->
     <section class="hero-section">
-      <h1 class="display500 text-primary mb-200">Welcome to Diet AirDS</h1>
-      <p class="labelRegular40 text-secondary mb-300">Copy and paste these prompts to build with AI code generators.</p>
+      <div class="card-text-pair">
+        <h1 class="display500 text-primary">Welcome to Diet AirDS</h1>
+        <p class="labelRegular40 text-secondary">Copy and paste these prompts to build with AI code generators.</p>
+      </div>
     </section>
 
-    <!-- How to Use -->
+    <!-- How to Use - Using Text Pair 5000 -->
     <div class="note-box mb-content">
-      <h3 class="title50 mb-150">How to Use</h3>
+      <div class="card-text-pair mb-200">
+        <h3 class="title50">How to Use</h3>
+      </div>
       <p class="bodyRegular30 mb-200">Copy any prompt below and paste it into an AI code generator like Claude, ChatGPT, or similar tools. Replace <code>[Describe what you want to build]</code> with your component description.</p>
       <p class="bodyRegular30"><strong>Tip:</strong> Change <code>data-mode="light"</code> to <code>data-mode="dark"</code> for dark mode variants.</p>
     </div>
 
-    <!-- Minnesota Timberwolves -->
+    <!-- Minnesota Timberwolves - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Minnesota Timberwolves</h2>
-      <p class="labelRegular30 text-secondary mb-200">Blue/Green theme • 8px button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Minnesota Timberwolves</h2>
+        <p class="labelRegular20 text-secondary">Blue/Green theme • 8px button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -189,10 +195,12 @@ Use data-theme="wolves" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'wolves')">Copy</button>
     </div>
 
-    <!-- Minnesota Lynx -->
+    <!-- Minnesota Lynx - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Minnesota Lynx</h2>
-      <p class="labelRegular30 text-secondary mb-200">Blue/Green theme • 12px button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Minnesota Lynx</h2>
+        <p class="labelRegular20 text-secondary">Blue/Green theme • 12px button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -202,10 +210,12 @@ Use data-theme="lynx" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'lynx')">Copy</button>
     </div>
 
-    <!-- North Carolina Courage -->
+    <!-- North Carolina Courage - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">North Carolina Courage</h2>
-      <p class="labelRegular30 text-secondary mb-200">Red/Gold theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">North Carolina Courage</h2>
+        <p class="labelRegular20 text-secondary">Red/Gold theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -215,10 +225,12 @@ Use data-theme="courage" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'courage')">Copy</button>
     </div>
 
-    <!-- Denver Summit FC -->
+    <!-- Denver Summit FC - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Denver Summit FC</h2>
-      <p class="labelRegular30 text-secondary mb-200">Green/Red/Yellow theme • 8px button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Denver Summit FC</h2>
+        <p class="labelRegular20 text-secondary">Green/Red/Yellow theme • 8px button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -228,10 +240,12 @@ Use data-theme="summit" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'summit')">Copy</button>
     </div>
 
-    <!-- Bucknell Bison -->
+    <!-- Bucknell Bison - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Bucknell Bison</h2>
-      <p class="labelRegular30 text-secondary mb-200">Navy/Orange theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Bucknell Bison</h2>
+        <p class="labelRegular20 text-secondary">Navy/Orange theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -241,10 +255,12 @@ Use data-theme="bucknell" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'bucknell')">Copy</button>
     </div>
 
-    <!-- Seattle Sounders FC -->
+    <!-- Seattle Sounders FC - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Seattle Sounders FC</h2>
-      <p class="labelRegular30 text-secondary mb-200">Green/Blue/Teal theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Seattle Sounders FC</h2>
+        <p class="labelRegular20 text-secondary">Green/Blue/Teal theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -254,10 +270,12 @@ Use data-theme="sounders" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'sounders')">Copy</button>
     </div>
 
-    <!-- Seattle Reign FC -->
+    <!-- Seattle Reign FC - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Seattle Reign FC</h2>
-      <p class="labelRegular30 text-secondary mb-200">Purple/Gold theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Seattle Reign FC</h2>
+        <p class="labelRegular20 text-secondary">Purple/Gold theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -267,10 +285,12 @@ Use data-theme="reign" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'reign')">Copy</button>
     </div>
 
-    <!-- North Carolina Football Club -->
+    <!-- North Carolina Football Club - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">North Carolina Football Club</h2>
-      <p class="labelRegular30 text-secondary mb-200">Blue/Gold theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">North Carolina Football Club</h2>
+        <p class="labelRegular20 text-secondary">Blue/Gold theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -280,10 +300,12 @@ Use data-theme="ncfc" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'ncfc')">Copy</button>
     </div>
 
-    <!-- Jump Default -->
+    <!-- Jump Default - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Jump Default</h2>
-      <p class="labelRegular30 text-secondary mb-200">Purple/Lime theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Jump Default</h2>
+        <p class="labelRegular20 text-secondary">Purple/Lime theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -293,10 +315,12 @@ Use data-theme="jump" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'jump')">Copy</button>
     </div>
 
-    <!-- Las Vegas Athletics -->
+    <!-- Las Vegas Athletics - Using Text Pair 5000 -->
     <div class="prompt-card">
-      <h2 class="title60 mb-150">Las Vegas Athletics</h2>
-      <p class="labelRegular30 text-secondary mb-200">Green/Yellow theme • Pill button radius</p>
+      <div class="card-text-pair mb-200">
+        <h2 class="title50">Las Vegas Athletics</h2>
+        <p class="labelRegular20 text-secondary">Green/Yellow theme • Pill button radius</p>
+      </div>
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
@@ -306,19 +330,21 @@ Use data-theme="athletics" and data-mode="light"
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'athletics')">Copy</button>
     </div>
 
-    <!-- Dark Mode Note -->
+    <!-- Dark Mode Note - Using Text Pair 5000 -->
     <div class="note-box my-content">
-      <h3 class="title50 mb-150">Dark Mode Variants</h3>
-      <p class="bodyRegular30">Simply change <code>data-mode="light"</code> to <code>data-mode="dark"</code> in any prompt above to generate dark mode components.</p>
+      <div class="card-text-pair">
+        <h3 class="title50">Dark Mode Variants</h3>
+      </div>
+      <p class="bodyRegular30" style="margin-top: var(--spacing-200);">Simply change <code>data-mode="light"</code> to <code>data-mode="dark"</code> in any prompt above to generate dark mode components.</p>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer - Using Text Pair 4000 -->
     <footer class="py-large" style="text-align: center; border-top: var(--border-weight-50) solid var(--border-default); margin-top: var(--spacing-700);">
-      <p class="labelRegular30 text-secondary">JUMP Design System • <a href="https://diet-air-ds.vercel.app/component-prompt-guide.md" class="text-brand-interactive">View Full Guide</a></p>
+      <p class="labelRegular20 text-secondary">JUMP Design System • <a href="https://diet-air-ds.vercel.app/component-prompt-guide.md" class="text-brand-interactive">View Full Guide</a></p>
     </footer>
   </div>
 
- <script>
+  <script>
     // Initialize theme and mode
     function initializeTheme() {
       const html = document.documentElement;
@@ -358,7 +384,7 @@ Use data-theme="athletics" and data-mode="light"
       }
     }
 
-    // Copy prompt function (your existing function preserved)
+    // Copy prompt function
     function copyPrompt(button, theme) {
       const promptText = `Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
