--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="prompt-code">Build this using the JUMP design system:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
-Use data-theme="wolves" and data-mode="light"
+Use data-theme="wolves" and data-mode="dark"
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'wolves')">Copy</button>
