more text colors

--- a/interactive-tokens-refactored.html
+++ b/interactive-tokens-refactored.html
@@ -242,6 +242,10 @@
       font-family: 'SF Mono', 'Fira Code', monospace;
     }
 
+    .code-block * {
+      color: inherit;
+    }
+
     /* Responsive: stack token grid on mobile */
     @media (max-width: 499px) {
       .token-grid {
