--- a/example/02-spacing.html
+++ b/example/02-spacing.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="spacing">
+<div class="container-wide py-300" id="spacing">
 
 
 <h3 class="title50 mt-400 mb-100">Fixed Spacing Scale (4px – 80px)</h3>
