--- a/example/04-typography.html
+++ b/example/04-typography.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="typography">
+<div class="container-wide py-300" id="typography">
 
 <h3 class="title50 mt-400 mb-100">Display Styles (Team Font)</h3>
 
