--- a/example/05-textpairs.html
+++ b/example/05-textpairs.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="textpairs">
+<div class="container-wide py-300" id="textpairs">
 
 
 <div class="doc-preview">
