--- a/example/08-interactive.html
+++ b/example/08-interactive.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="interactive">
+<div class="container-wide py-300" id="interactive">
 
 
 <h3 class="title50 mt-400 mb-100">Fill Surfaces</h3>
