--- a/example/10-cards.html
+++ b/example/10-cards.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="cards">
+<div class="container-wide py-300" id="cards">
 
 <h3 class="title50 mt-400 mb-100">Closed Layout Card</h3>
 <div class="doc-preview" doc-preview-label"="" style="background: var(--bg-base);
