--- a/example/12-layout.html
+++ b/example/12-layout.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="layout">
+<div class="container-wide py-300" id="layout">
 
 <h3 class="title50 mt-400 mb-100">Grid Columns (responsive)</h3>
 <div class="doc-preview">
