--- a/example/11-listrows.html
+++ b/example/11-listrows.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-large" id="listrows">
+<div class="container-wide py-300" id="listrows">
 
 
 <h3 class="title50 mt-400 mb-100">Basic List Rows</h3>
