--- a/example/01-colors.html
+++ b/example/01-colors.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-300" id="colors">
+<div class="container-wide" id="colors">
 
 
 <h3 class="title50 mt-400 mb-100">Background Tokens</h3>
