--- a/example/06-icons.html
+++ b/example/06-icons.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-300" id="icons">
+<div class="container-wide" id="icons">
 
 
 <h3 class="title50 mt-400 mb-100">Icon Sizes</h3>
