--- a/example/07-borders.html
+++ b/example/07-borders.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-300" id="borders">
+<div class="container-wide" id="borders">
 
 <h3 class="title50 mt-400 mb-100">Border Radius</h3>
 <div class="doc-preview">
