--- a/example/09-buttons.html
+++ b/example/09-buttons.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-300" id="buttons">
+<div class="container-wide" id="buttons">
 
 
 <h3 class="title50 mt-400 mb-100">Button Types (All at btn-300)</h3>
