--- a/walkthrough.html
+++ b/walkthrough.html
@@ -46,6 +46,7 @@
 .doc-controls-inner {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: var(--spacing-200);
   flex-wrap: wrap;
 }
