--- a/example/03-containers.html
+++ b/example/03-containers.html
@@ -342,7 +342,7 @@
 </div>
 </div>
 </div>
-<div class="container-wide py-300" id="containers">
+<div class="container-wide" id="containers">
 
 
 <div>
