--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section class="hero-section">
       <div class="card-text-pair">
         <h1 class="display500 text-primary">Welcome to Diet AirDS</h1>
-        <p class="labelRegular40 text-secondary">Copy and paste these prompts to build with AI code generators.</p>
+        <p class="labelRegular40 text-secondary">Copy and paste these prompts to build with AI code generators. <a href="/walkthrough.html">Learn More about Diet AirDS</a></p>
       </div>
     </section>
 
