--- a/index.html
+++ b/index.html
@@ -186,10 +186,12 @@
         <h2 class="title50">Minnesota Timberwolves</h2>
         <p class="labelRegular20 text-secondary">Blue/Green theme • 8px button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="wolves" and data-mode="dark"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'wolves')">Copy</button>
@@ -201,10 +203,12 @@ Use data-theme="wolves" and data-mode="dark"
         <h2 class="title50">Minnesota Lynx</h2>
         <p class="labelRegular20 text-secondary">Blue/Green theme • 12px button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="lynx" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'lynx')">Copy</button>
@@ -216,10 +220,12 @@ Use data-theme="lynx" and data-mode="light"
         <h2 class="title50">North Carolina Courage</h2>
         <p class="labelRegular20 text-secondary">Red/Gold theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="courage" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'courage')">Copy</button>
@@ -231,10 +237,12 @@ Use data-theme="courage" and data-mode="light"
         <h2 class="title50">Denver Summit FC</h2>
         <p class="labelRegular20 text-secondary">Green/Red/Yellow theme • 8px button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="summit" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'summit')">Copy</button>
@@ -246,10 +254,12 @@ Use data-theme="summit" and data-mode="light"
         <h2 class="title50">Bucknell Bison</h2>
         <p class="labelRegular20 text-secondary">Navy/Orange theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="bucknell" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'bucknell')">Copy</button>
@@ -261,10 +271,12 @@ Use data-theme="bucknell" and data-mode="light"
         <h2 class="title50">Seattle Sounders FC</h2>
         <p class="labelRegular20 text-secondary">Green/Blue/Teal theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="sounders" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'sounders')">Copy</button>
@@ -276,10 +288,12 @@ Use data-theme="sounders" and data-mode="light"
         <h2 class="title50">Seattle Reign FC</h2>
         <p class="labelRegular20 text-secondary">Purple/Gold theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="reign" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'reign')">Copy</button>
@@ -291,10 +305,12 @@ Use data-theme="reign" and data-mode="light"
         <h2 class="title50">North Carolina Football Club</h2>
         <p class="labelRegular20 text-secondary">Blue/Gold theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="ncfc" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'ncfc')">Copy</button>
@@ -306,10 +322,12 @@ Use data-theme="ncfc" and data-mode="light"
         <h2 class="title50">Jump Default</h2>
         <p class="labelRegular20 text-secondary">Purple/Lime theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="jump" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'jump')">Copy</button>
@@ -321,10 +339,12 @@ Use data-theme="jump" and data-mode="light"
         <h2 class="title50">Las Vegas Athletics</h2>
         <p class="labelRegular20 text-secondary">Green/Yellow theme • Pill button radius</p>
       </div>
-      <div class="prompt-code">Build this using the JUMP design system:
+      <div class="prompt-code">Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="athletics" and data-mode="light"
+
+Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS. 
 
 [Describe what you want to build]</div>
       <button class="copy-btn labelBold40" onclick="copyPrompt(this, 'athletics')">Copy</button>
@@ -386,7 +406,7 @@ Use data-theme="athletics" and data-mode="light"
 
     // Copy prompt function
     function copyPrompt(button, theme) {
-      const promptText = `Build this using the JUMP design system:
+      const promptText = `Build this using Diet AirDS:
 https://diet-air-ds.vercel.app/component-prompt-guide.md
 
 Use data-theme="${theme}" and data-mode="light"
