--- a/examples/index.html
+++ b/examples/index.html
@@ -181,7 +181,7 @@
 
     <div class="org-nav-logo">
       <span class="material-symbols-rounded icon-filled text-secondary">water_full</span>
-      <span class="labelBold40">DIET AIRDS</span>
+      <span class="display200 text-primary">Diet AirDS</span>
     </div>
 
     <div class="controls">
@@ -252,6 +252,34 @@
           </div>
           <div class="card-footer">
             <span class="labelRegular10 text-secondary">Wolves theme</span>
+            <span class="material-symbols-rounded text-secondary">open_in_new</span>
+          </div>
+        </a>
+
+        <!-- ---- Chat Agent ---- -->
+        <a class="example-card" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
+          <div class="card-thumbnail">
+            <iframe src="https://diet-air-ds.vercel.app/examples/chat-agent.html"
+                    loading="lazy"
+                    title="Chat Agent example preview"
+                    tabindex="-1"
+                    aria-hidden="true"></iframe>
+          </div>
+          <div class="card-body">
+            <div class="card-text-pair">
+              <h2 class="labelBold40">Chat Agent</h2>
+              <p class="labelRegular20 text-secondary">AI ticket assistant with suggestion chips, chat input, and full app-shell layout.</p>
+            </div>
+            <div class="token-tags">
+              <div class="tag"><span class="labelBold20">org-nav</span></div>
+              <div class="tag"><span class="labelBold20">btn-secondary</span></div>
+              <div class="tag"><span class="labelBold20">bg-base</span></div>
+              <div class="tag"><span class="labelBold20">text-pairs</span></div>
+              <div class="tag"><span class="labelBold20">display-type</span></div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <span class="labelRegular10 text-secondary">Wolves theme · Dark</span>
             <span class="material-symbols-rounded text-secondary">open_in_new</span>
           </div>
         </a>
