--- a/examples/index.html
+++ b/examples/index.html
@@ -180,7 +180,7 @@
   <header class="org-nav">
 
     <div class="org-nav-logo">
-      <span class="material-symbols-rounded icon-filled text-secondary">water_full</span>
+      <span class="material-symbols-rounded icon-filled text-primary">water_full</span>
       <span class="display200 text-primary">Diet AirDS</span>
     </div>
 
